# tapo-plug-cli

./: .env.example  .gitignore  INTEGRATION.md  README.md  api-servis.bat  api.py  baslat-api.bat  cli.py  deploy-pc7.ps1  istek-gonder.bat  kurulum.bat  pyproject.toml  requirements.txt  run-api.ps1  start-api.bat  start-api.vbs  tapo.ps1
examples/: usage.py
tapo_plug/: __init__.py  client.py  config.py  exceptions.py
tests/: conftest.py  mock_credentials.py  test_api.py  test_tapo_plug_mock.py
